--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 git_settings.txt
 .idea/
+01_async/server/log/
+01_async/clients/config/__pycache__/
+01_async/clients/tools/__pycache__/
+01_async/server/config/__pycache__/
